--- a/index.html
+++ b/index.html
@@ -1,93 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dance Home Landing Page</title>
-    <link rel="stylesheet" href="css/styel.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Dancing HomePage</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
     <div class="container">
-        <!-- navbar section -->
-        <nav class="navbar-container">
-            <div class="navbar">
-                <div class="logo">
-                    <img src="./images/Logo.png" alt="logo">
-                </div>
-                <ul class="list">
-                    <div class="line"></div>
-                    <li class="list-item">Home</li>
-                    <li class="list-item">About Us</li>
-                    <li class="list-item">Portfolio</li>
-                    <li class="list-item">Contact</li>
-                </ul>
-            </div>
-        </nav>
-        
-        <main>
-            <section class="left-image-container">
-                <div class="left-image">
-                    <img src="./images/pexels-rfstudio-3819572.jpg" alt="image">
-                </div>
-            </section>
-    
-            <section class="right-container">
-                <div class="heading">
-                    <h1>Crea </h1>
-                    <div>
-                        <h1>tivity</h1>
-                        <p>is our <br> ingredient.</p>
-                    </div>
-                    <div class="btn-wrapper">
-                        <button>Check Our Package</button>
-                    </div>
-                </div>
-                <div class="social-icons">
-                    <img src="./assets/Twitter Icon.svg" alt="twitter" class="icon">
-                    <img src="./assets/Instagram Icon.svg" alt="instagram" class="icon">
-                    <img src="./assets/Facebook Icon.svg" alt="facebook" class="icon">
-                    <img src="./assets/Email Icon.svg" alt="mail" class="icon">
-                </div>
-                <div class="bottom">
-                    <ul>
-                        <span class="line-dot"></span>
-                        <li class="active-item">
-                           <span class="dot"></span> 
-                            <p>Photography</p>
-                        </li>
-                        <li>
-                           <span class="dot"></span> 
-                           <p>Videography</p></li>
-                        <li>
-                           <span class="dot"></span> 
-                           <p>Graphics Design</p></li>
-                        <li>
-                           <span class="dot"></span> 
-                           <p>Illustration</p></li>
-                        <li>
-                           <span class="dot"></span> 
-                           <p>Animation</p></li>
-                    </ul>
-                    <div class="bottom-quote">
-                        <span class="quote-icon">
-                            <i  class="fa-solid fa-quote-right"></i>
-                        </span>
-                        <p>We help you to create the best graphics,
-                            <br> photos, videos, animations and illustrations
-                        </p>
-                        <div class="img">
-                            <img src="./images/dancing.jpg" alt="dance-image">
-                        </div>
-                        <div class="arrow">
-                            <img src="./assets/arrow.svg" alt="arrow">
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-        </main>
+      <div class="image-group">
+        <img src="images/Logo.png" alt="brand-logo" class="logo" />
+        <img src="images/pexels-rfstudio-3819572.jpg" height="100%" alt="" />
+      </div>
+      <div class="right-container">
+        <header>
+          <div class="line"></div>
+          <nav>
+            <ul>
+              <li>Home</li>
+              <li>About us</li>
+              <li>Portfolio</li>
+              <li>Contact</li>
+            </ul>
+          </nav>
+        </header>
+        <div class="title-container">
+          <h1>
+            <span class="stroke">Crea-</span><span class="filled">tivity.</span>
+          </h1>
+          <div class="package">
+            <p class="sub-title">
+              is our <br />
+              ingredient
+            </p>
+            <br />
+            <button class="btn-package">Check out package</button>
+          </div>
+        </div>
+        <div class="socials">
+          <a href="https://www.twitter.com"
+            ><img src="assets/Twitter Icon.svg" alt="twitter"
+          /></a>
+          <a href="https://www.instagram.com"
+            ><img src="assets/Instagram Icon.svg" alt="instagram"
+          /></a>
+          <a href="https://www.facebook.com"
+            ><img src="assets/Facebook Icon.svg" alt="facebook"
+          /></a>
+          <a href="https://www.nothing.com"
+            ><img src="assets/Email Icon.svg" alt="email"
+          /></a>
+        </div>
+        <div class="featured-container">
+          <div class="list-line"></div>
+          <div class="list-items">
+            <ul>
+              <li>Photography</li>
+              <li>Videography</li>
+              <li>Graphic design</li>
+              <li>Illustration</li>
+              <li>Animation</li>
+            </ul>
+          </div>
+          <div class="featured-image">
+            <span class="quote"></span>
+            <p class="featured-text">
+              We help you to create best graphics, Photos, Videos, animations
+              and illustrations
+            </p>
+            <img
+              src="images/dancing.jpg"
+              width="400px"
+              alt=""
+            />
+          </div>
+          <img src="assets/arrow.svg" alt="arrow" height="20px" />
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
